Open Source Code Link

--- a/index.html
+++ b/index.html
@@ -50,6 +50,8 @@
     </div>
     <script src="src/index.js"></script>
     </div>
+    <p>
+        <a href="https://github.com/tpea85/She-Codes-Weather-App.git">Open Source Code</a> by Talancia Pea
+    </p>
 </body>
-
 </html>
