--- a/index.html
+++ b/index.html
@@ -1,57 +1,20 @@
-<!DOCTYPE html>
-<html>
-
-<head>
-    <title>Parcel Sandbox</title>
-    <meta charset="UTF-8" />
-    <script src="https://unpkg.com/axios@1.1.2/dist/axios.min.js"></script>
-    <link href="src/styles.css" />
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous" />
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8"
-        crossorigin="anonymous"></script>
-</head>
-
-<body>
-    <div class="container">
-        <div class="weather-app">
-            <form class="search-form" id="search-form">
-                <input type="text" placeholder="Search for a city" autocomplete="off" autofocus="on" id="city-input" />
-                <input type="submit" value="Search" />
-            </form>
-
-            <br />
-            <h1 id="city">
-                Melbourne, Florida
-            </h1>
-            <ul>
-                <li id="date"></li>
-                <li>
-                    Partly Cloudy
-                </li>
-            </ul>
-            <br />
-            <div class="float-left">
-                <span class="temperature" id="temperature">19</span>
-                <span class="units">
-                    <a href="#" id="celsius-link">°C</a>
-                    <a href="#" id="fahrenheit-link">°F</a>
-
-                </span>
-                <div class="col-6">
-                    <ul>
-                        <li>Humidity: <span id="humidity"></span>%</li>
-                        <li>Wind: <span id="wind"></span> km/h</li>
-                    </ul>
-                </div>
-            </div>
+    <!DOCTYPE html>
+    <html lang="en">
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=, initial-scale=1.0">
+        <link rel="stylesheet" href="src/style.css" />
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"/>
+        <title>Weather App</title>
+    </head>
+    <body>
+        <div class="container">
+        <h1> 
+        Hello World
+        </h1>
+        <a href="" class="btn btn-primary">Click me</a>
         </div>
-    </div>
-    <script src="src/index.js"></script>
-    </div>
-    <p>
-        <a href="https://github.com/tpea85/She-Codes-Weather-App.git">Open Source Code</a> by Talancia Pea
-    </p>
-</body>
-</html>
+    <script scr="scr/app.js"></script>
+    </body>
+    </html>
